objects/Recap__c.object
<CustomObject>
    <fields>
        <fullName>LC_Score_Count__c</fullName>
        <description>A tally of the amount of questions answered yes.</description>
        <formula>CASE(R01__c, &quot;YES&quot;, 1, 0)+
CASE(R05__c, &quot;YES&quot;, 1, 0)+
CASE(R07__c, &quot;YES&quot;, 1, 0)+
CASE(R08__c, &quot;YES&quot;, 1, 0)+
CASE(R09__c, &quot;YES&quot;, 1, 0)+
CASE(R10__c, &quot;YES&quot;, 1, 0)+
CASE(R04__c, &quot;YES&quot;, 1, 0)+
CASE(R02__c, &quot;YES&quot;, 1, 0)+
CASE(R03__c, &quot;YES&quot;, 1, 0)+
CASE(R06__c, &quot;YES&quot;, 1, 0)+
CASE(R11__c, &quot;YES&quot;, 1, 0)+
CASE(R12__c, &quot;YES&quot;, 1, 0)+
CASE(q16__c, &quot;YES&quot;, 1, 0)+
CASE(q18__c, &quot;YES&quot;, 1, 0)+
CASE(q21__c, &quot;YES&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LC_Score_New__c</fullName>
        <description>For scores after Oct 2015</description>
        <formula>LC_Score_Count_New__c/ LC_Answered_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Score New</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LC_Score__c</fullName>
        <formula>LC_Score_Count__c/ LC_Answered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Launch_Consultant__c</fullName>
        <description>Launch_Coordinator__c from the associated Project</description>
        <label>Launch Consultant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Launch Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_assignment_verification_form_notes__c</fullName>
        <label>Lead Assignment Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_settings_verification_form_notes__c</fullName>
        <label>Lead Settings Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limited_Users_Notes__c</fullName>
        <label>Limited Users Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Users__c</fullName>
        <label>Limited Users</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Vantage_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Lot Vantage Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Vantage_Notes__c</fullName>
        <label>Lot Vantage Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lot_Vantage_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Lot Vantage Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Vantage__c</fullName>
        <label>Lot Vantage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_notes__c</fullName>
        <label>Mobile Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Internet_Pricing_From__c</fullName>
        <label>New Internet Pricing From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Retail_Pricing_From__c</fullName>
        <label>New Retail Pricing From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_ROs_notes__c</fullName>
        <label>Open ROs Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PBX_Setup_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>PBX Setup Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBX_Setup_On_Time__c</fullName>
        <label>PBX Setup On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PBX_Setup_Set_Days_Due__c</fullName>
        <defaultValue>20</defaultValue>
        <label>PBX Setup Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_Completed_Date__c</fullName>
        <label>PT Active Leads No Future Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>PT Active Leads No Future Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_Follow_up__c</fullName>
        <label>PT Active Leads No Future Follow-up</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_Notes__c</fullName>
        <label>PT Active Leads No Future Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(PT_Active_Leads_No_Future_Follow_up__c,&quot;N/A&quot;) &amp;&amp; PT_Active_Leads_No_Future_Completed_Date__c &lt;= PT_Active_Leads_No_Future_Due_Date__c , &quot;Yes&quot;, 
IF( !ISPICKVAL(PT_Active_Leads_No_Future_Follow_up__c,&quot;N/A&quot;) &amp;&amp; PT_Active_Leads_No_Future_Completed_Date__c &gt; PT_Active_Leads_No_Future_Due_Date__c , 
&quot;No&quot;,
IF( !ISPICKVAL(PT_Active_Leads_No_Future_Follow_up__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_Active_Leads_No_Future_Completed_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Active Leads No Future On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Active_Leads_No_Future_Set_Days_Due__c</fullName>
        <defaultValue>3</defaultValue>
        <label>PT Active Leads No Future Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_1_Notes__c</fullName>
        <label>PT Ad Hoc 1 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_1__c</fullName>
        <label>PT Ad Hoc 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_2_Notes__c</fullName>
        <label>PT Ad Hoc 2 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_2__c</fullName>
        <label>PT Ad Hoc 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_3_Notes__c</fullName>
        <label>PT Ad Hoc 3 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Ad_Hoc_3__c</fullName>
        <label>PT Ad Hoc 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Answered__c</fullName>
        <formula>CASE(PT_Scheduled_Custom_Reports__c, &quot;N/A&quot;,0,1)+
CASE(PT_ROI_Settings_Configured__c, &quot;N/A&quot;,0,1)+
CASE(PT_Processes_Enabled__c, &quot;N/A&quot;,0,1)+
CASE(PT_Processes_Customized__c, &quot;N/A&quot;,0,1)+
CASE(PT_User_List_Configuration__c, &quot;N/A&quot;,0,1)+
CASE(PT_Lead_Assignment_Configuration__c, &quot;N/A&quot;,0,1)+
CASE(PT_Lead_Settings_Configuration__c, &quot;N/A&quot;,0,1)+
CASE(PT_Desking_Verified_and_Push_Functioning__c, &quot;N/A&quot;,0,1)+
CASE(PT_Inventory_Verified__c, &quot;N/A&quot;,0,1)+
CASE(PT_CRM_DMS_Matching_Review__c, &quot;N/A&quot;,0,1)+
CASE(PT_Active_Leads_No_Future_Follow_up__c, &quot;N/A&quot;,0,1)+
CASE(PT_Ad_Hoc_1__c, &quot;N/A&quot;,0,1)+
CASE(PT_Ad_Hoc_2__c, &quot;N/A&quot;,0,1)+
CASE(PT_Ad_Hoc_3__c, &quot;N/A&quot;,0,1)+
CASE(Product_Training_Complete__c, &quot;N/A&quot;,0,1)</formula>
        <label>PT Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_Complete_Date__c</fullName>
        <label>PT CRM/DMS Matching Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_Due_Date__c</fullName>
        <label>PT CRM/DMS Matching Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_Notes__c</fullName>
        <label>PT CRM/DMS Matching Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF(!ISPICKVAL(PT_CRM_DMS_Matching_Review__c,&quot;N/A&quot;) &amp;&amp; PT_CRM_DMS_Matching_Complete_Date__c &lt;= PT_CRM_DMS_Matching_Due_Date__c, &quot;Yes&quot;, 
IF(!ISPICKVAL(PT_CRM_DMS_Matching_Review__c,&quot;N/A&quot;) &amp;&amp; PT_CRM_DMS_Matching_Complete_Date__c &gt; PT_CRM_DMS_Matching_Due_Date__c, 
&quot;No&quot;,
IF(!ISPICKVAL(PT_CRM_DMS_Matching_Review__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_CRM_DMS_Matching_Complete_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT CRM DMS Matching On Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_Review__c</fullName>
        <label>PT CRM/DMS Matching Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_CRM_DMS_Matching_Set_Days_Due__c</fullName>
        <defaultValue>3</defaultValue>
        <label>PT CRM DMS Matching Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_DP_GM_Engagement_Notes__c</fullName>
        <label>PT DP/GM Engagement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_DP_GM_Engagement__c</fullName>
        <label>PT DP/GM Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Dealer_Grade_Answered__c</fullName>
        <formula>IF( ISPICKVAL(PT_Overall_Dealer_Health__c , &quot;--None--&quot;), 0, VALUE(TEXT( PT_Overall_Dealer_Health__c))) + 
IF( ISPICKVAL(PT_DP_GM_Engagement__c, &quot;--None--&quot;), 0, VALUE(TEXT( PT_DP_GM_Engagement__c))) + 
IF( ISPICKVAL(PT_Sales_Desk_Managers_Engagement__c, &quot;--None--&quot;), 0, VALUE(TEXT( PT_Sales_Desk_Managers_Engagement__c))) + 
IF( ISPICKVAL(PT_Salespeople_Engagement__c, &quot;--None--&quot;), 0, VALUE(TEXT( PT_Salespeople_Engagement__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Dealer Grade Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Dealer_Grade_Count__c</fullName>
        <formula>CASE(PT_Overall_Dealer_Health__c, &quot;--None--&quot;,0,1) + 
CASE(PT_DP_GM_Engagement__c, &quot;--None--&quot;,0,1) + 
CASE(PT_Sales_Desk_Managers_Engagement__c, &quot;--None--&quot;,0,1) + 
CASE(PT_Salespeople_Engagement__c, &quot;--None--&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Dealer Grade Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Dealer_Grade__c</fullName>
        <formula>PT_Dealer_Grade_Answered__c  /  PT_Dealer_Grade_Count__c</formula>
        <label>PT Dealer Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Desking_Verified_and_Push_Functioning__c</fullName>
        <label>PT Desking Verified and Push Functioning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Desking_and_Push_Notes__c</fullName>
        <label>PT Desking and Push Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified_Complete_Date__c</fullName>
        <label>PT Inventory Verified Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>PT Inventory Verified Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified_Notes__c</fullName>
        <label>PT Inventory Verified Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(PT_Inventory_Verified__c,&quot;N/A&quot;) &amp;&amp; PT_Inventory_Verified_Complete_Date__c &lt;= PT_Inventory_Verified_Due_Date__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(PT_Inventory_Verified__c,&quot;N/A&quot;) &amp;&amp; PT_Inventory_Verified_Complete_Date__c &gt; PT_Inventory_Verified_Due_Date__c, 
&quot;No&quot;,
IF( !ISPICKVAL(PT_Inventory_Verified__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_Inventory_Verified_Complete_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Inventory Verified On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified_Set_Days_Due__c</fullName>
        <defaultValue>2</defaultValue>
        <label>PT Inventory Verified Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Inventory_Verified__c</fullName>
        <label>PT Inventory Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Assignment_Configuration_Notes__c</fullName>
        <label>PT Lead Assignment Configuration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Assignment_Configuration__c</fullName>
        <label>PT Lead Assignment Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Settings_Configuration_Notes__c</fullName>
        <label>PT Lead Settings Configuration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Settings_Configuration__c</fullName>
        <label>PT Lead Settings Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Number_of_Tickets_Opened__c</fullName>
        <label>PT Number of Tickets Opened</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_On_Time_Score__c</fullName>
        <label>PT On Time Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PT_Overall_Dealer_Health_Notes__c</fullName>
        <label>PT Overall Dealer Health Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Overall_Dealer_Health__c</fullName>
        <label>PT Overall Dealer Health</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Customized_Notes__c</fullName>
        <label>PT Processes Customized Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Customized__c</fullName>
        <label>PT Processes Customized</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled_Complete_Date__c</fullName>
        <label>PT Processes Enabled Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>PT Processes Enabled Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled_Notes__c</fullName>
        <label>PT Processes Enabled Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(PT_Processes_Enabled__c,&quot;N/A&quot;) &amp;&amp; PT_Processes_Enabled_Complete_Date__c &lt;= PT_Processes_Enabled_Due_Date__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(PT_Processes_Enabled__c,&quot;N/A&quot;) &amp;&amp; PT_Processes_Enabled_Complete_Date__c&gt; PT_Processes_Enabled_Due_Date__c, 
&quot;No&quot;,
IF( !ISPICKVAL(PT_Processes_Enabled__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_Processes_Enabled_Complete_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Processes Enabled On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled_Set_Days_Due__c</fullName>
        <defaultValue>1</defaultValue>
        <label>PT Processes Enabled Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Processes_Enabled__c</fullName>
        <label>PT Processes Enabled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured_Complete_Date__c</fullName>
        <label>PT ROI Settings Configured Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>PT ROI Settings Configured Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured_Notes__c</fullName>
        <label>PT ROI Settings Configured Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(PT_ROI_Settings_Configured__c,&quot;N/A&quot;) &amp;&amp; PT_ROI_Settings_Configured_Complete_Date__c &lt;= PT_ROI_Settings_Configured_Due_Date__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(PT_ROI_Settings_Configured__c,&quot;N/A&quot;) &amp;&amp; PT_ROI_Settings_Configured_Complete_Date__c&gt; PT_ROI_Settings_Configured_Due_Date__c, 
&quot;No&quot;,
IF( !ISPICKVAL(PT_ROI_Settings_Configured__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_ROI_Settings_Configured_Complete_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT ROI Settings Configured On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured_Set_Days_Due__c</fullName>
        <defaultValue>2</defaultValue>
        <label>PT ROI Settings Configured Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_ROI_Settings_Configured__c</fullName>
        <label>PT ROI Settings Configured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Sales_Desk_Managers_Engagement_Notes__c</fullName>
        <label>PT Sales/Desk Managers Engagement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Sales_Desk_Managers_Engagement__c</fullName>
        <label>PT Sales/Desk Managers Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Sales_Opportunity_1__c</fullName>
        <label>PT Sales Opportunity 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Sales_Opportunity_2__c</fullName>
        <label>PT Sales Opportunity 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Sales_Opportunity_3__c</fullName>
        <label>PT Sales Opportunity 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Salespeople_Engagement_Notes__c</fullName>
        <label>PT Salespeople Engagement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Salespeople_Engagement__c</fullName>
        <label>PT Salespeople Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports_Complete__c</fullName>
        <label>PT Scheduled Custom Reports Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>PT Scheduled Custom Reports Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports_Notes__c</fullName>
        <label>PT Scheduled Custom Reports Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(PT_Scheduled_Custom_Reports__c,&quot;N/A&quot;) &amp;&amp; PT_Scheduled_Custom_Reports_Complete__c &lt;= PT_Scheduled_Custom_Reports_Due_Date__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(PT_Scheduled_Custom_Reports__c,&quot;N/A&quot;) &amp;&amp; PT_Scheduled_Custom_Reports_Complete__c &gt; PT_Scheduled_Custom_Reports_Due_Date__c, 
&quot;No&quot;,
IF( !ISPICKVAL(PT_Scheduled_Custom_Reports__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(PT_Scheduled_Custom_Reports_Complete__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Scheduled Custom Reports On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports_Set_Days_Due__c</fullName>
        <defaultValue>2</defaultValue>
        <label>PT Scheduled Custom Reports Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Scheduled_Custom_Reports__c</fullName>
        <label>PT Scheduled Custom Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Score_Count__c</fullName>
        <formula>CASE(PT_Scheduled_Custom_Reports__c, &quot;Yes&quot;,1,0)+
CASE(PT_ROI_Settings_Configured__c, &quot;Yes&quot;,1,0)+
CASE(PT_Processes_Enabled__c, &quot;Yes&quot;,1,0)+
CASE(PT_Processes_Customized__c, &quot;Yes&quot;,1,0)+
CASE(PT_User_List_Configuration__c, &quot;Yes&quot;,1,0)+
CASE(PT_Lead_Assignment_Configuration__c, &quot;Yes&quot;,1,0)+
CASE(PT_Lead_Settings_Configuration__c, &quot;Yes&quot;,1,0)+
CASE(PT_Desking_Verified_and_Push_Functioning__c, &quot;Yes&quot;,1,0)+
CASE(PT_Inventory_Verified__c, &quot;Yes&quot;,1,0)+
CASE(PT_CRM_DMS_Matching_Review__c, &quot;Yes&quot;,1,0)+
CASE(PT_Active_Leads_No_Future_Follow_up__c, &quot;Yes&quot;,1,0)+
CASE(PT_Ad_Hoc_1__c, &quot;Yes&quot;,1,0)+
CASE(PT_Ad_Hoc_2__c, &quot;Yes&quot;,1,0)+
CASE(PT_Ad_Hoc_3__c, &quot;Yes&quot;,1,0)+
CASE(Product_Training_Complete__c, &quot;Yes&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Score__c</fullName>
        <formula>PT_Score_Count__c /  PT_Answered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PT_Tickets_Opened_Notes__c</fullName>
        <label>PT Tickets Opened Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_User_List_Configuration_Notes__c</fullName>
        <label>PT User List Configuration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_User_List_Configuration__c</fullName>
        <label>PT User List Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_VinChampion__c</fullName>
        <label>PT VinChampion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Photos_from__c</fullName>
        <label>Photos From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processes_and_Temp_Set_Days_Due__c</fullName>
        <defaultValue>18</defaultValue>
        <label>Processes and Temp Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processes_and_Templates_Ver_On_Time__c</fullName>
        <label>Processes and Templates Ver. On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>